<resources>
    <string name="app_name">Tracktor</string>
    <string name="timeLabel">Время:</string>
    <string name="distanceLabel">Расстояние:</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="position">Текущее местоположение</string>
    <string name="distance_meters">м</string>
    <string name="shareRawData">Поделиться сырыми данными</string>
    <string name="noRawData">Список с сырыми данными пуст</string>
    <string name="my_google_maps_key">AIzaSyC6g6NJzdvDMGurKsjGsGqx1x2rLWz6cIo</string>
    <string name="routeStart">Начало</string>
    <string name="routeStop">Конец</string>
    <string name="emptyRoute">Маршрут пуст</string>
    <string name="notificationTitle">Маршрут активен</string>
    <string name="notifChannelLabel">Канал уведомлений Tacktor</string>
    <string name="permDialogTitle">Запрос разрешений</string>
    <string name="notGrantedPermMessage">Вы не дали необходимых разрешений. Приложение завершает работу.</string>
    <string name="OkLabel">OK</string>
    <string name="requestPermissionMessage">Нам необходимо знать Ваше местоположение, чтобы приложение работало. Доступ к хранилищу необходим для сохранения скриншотов.</string>
    <string name="share">Поделиться</string>
    <string name="label_id">Id элемента:</string>
    <string name="label_duration">Продолжительность:</string>
    <string name="label_distance">Расстояние:</string>
    <string name="delete">Удалить</string>
    <string name="pref_title">Настройки</string>
    <string name="unit_dialog_title">Выберите единицу измерения</string>
    <string name="unit_key">unit</string>
    <string name="unit_title">Единица измерения</string>
    <string name="shutdown_dialog_title">Выберите время отключения</string>
    <string name="shutdown_key">shutdown</string>
    <string name="shutdown_title">Время отключения</string>
    <string name="weight_title">Вес</string>
    <string name="weight_dialog_title">Введите вес пользователя</string>
    <string name="weight_key">weight</string>
    <string name="about_title">О приложении</string>
    <string name="speedLabel">Средняя скорость:</string>
    <string name="user_prop_label">Сведения о пользователе</string>
    <string name="program_settings_label">Настройки программы</string>
    <string name="height_dialog_title">Введите рост пользователя</string>
    <string name="height_key">height</string>
    <string name="height_title">Рост</string>
    <string name="sex_dialog_title">Выберите пол пользователя</string>
    <string name="sex_key">sex</string>
    <string name="sex_title">Пол</string>
    <string name="age_dialog_title">Введите возраст пользователя</string>
    <string name="age_key">age</string>
    <string name="age_title">Возраст</string>
    <string name="actionLabel">Вид деятельности:</string>
    <string name="dateLabel">Трек начат:</string>
    <string name="caloriesLabel">Затрачено калорий:</string>
    <string name="btn_save_label">Сохранить</string>
    <string name="btn_cancel_label">Отмена</string>
    <string name="comment_dialog_title">Ваш комментарий</string>
    <string name="no_comment">Введите комментарий</string>
    <string name="list_empty">Список пуст</string>
    <string name="label_start">Начало:</string>
    <string name="mi_sorting_order_label">Порядок сортировки</string>
    <string name="mi_sort_by_title">fff</string>
    <string name="commentLabel">Комментарий:</string>
    <string name="commentWeather">Погодные условия:</string>
    <string name="weather_stub">Не известно</string>
    <string name="edit_template_title">Редактировать шаблон сообщения</string>
    <string name="edit_text_title">Введите текст</string>
    <string name="save_btn">Сохранить</string>
    <string name="cancel_btn">Отмена</string>
    <string name="edit_parameter_dialog_title">Выберите тип параметра</string>
    <string name="menu_add_text">Добавить текстовое поле</string>
    <string name="menu_add_param">Добавить параметр</string>
    <string name="preview">Предпросмотр:</string>
    <string name="messageTemplateDraft">1{"mText":"'Я прошел'"}|2{"mType":2,"mText":"'Расстояние'"}|1{"mText":"'за'"}|2{"mType":1,"mText":"'Длительность'"}|1{"mText":"', в среднем со скоростью'"}|2{"mType":3,"mText":"'Скорость'"}|1{"mText":"', затратил при этом'"}|2{"mType":4,"mText":"'Истрачено калорий'"}|1{"mText":"', погодные условия'"}|2{"mType":6,"mText":"'Погодные условия'"}|1{"mText":"'. Вот посмотри'"}|2{"mType":8,"mText":"'Изображение'"}</string>
    <string name="share_chooser_title">Результаты маршрута</string>
    <string name="share_route_title">Мой маршрут</string>
    <string name="image_stub">[image]</string>
    <string name="mime_image">image/jpeg</string>
    <string name="mime_text">text/plain</string>
    <string name="picture_quality_dialog_title">Выберите качество скриншотов</string>
    <string name="picture_quality_key">picture_quality</string>
    <string name="picture_quality_title">Качество скриншотов</string>
    <string name="track_decoration_key">track_line</string>
    <string name="track_decoration_title">Декорирование трека</string>
    <string name="line_width_label">Толщина линии</string>
    <string name="line_color_label">Цвет линии</string>
    <string name="marker_type_label">Маркер</string>
    <string name="theme_dialog_title">Выберите тему для карты</string>
    <string name="map_theme_key">map_theme</string>
    <string name="theme_title">Тема карты</string>
    <string name="make_screenshot">Подготовка скриншота</string>
    <string name="background_dialog_title" >Работа в фоне</string>
    <string name="background_key">background_key</string>
    <string name="background_title">Работа в фоне</string>
</resources>
