<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedLabel"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivAverageSpeedIcon"
            tools:src="@drawable/ic_man_standing_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <TextView
            android:id="@+id/tvAverageSpeed"
            tools:text="10 км/ч"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriesLabel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCalories"
            tools:text="300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLabelWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentWeather"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            tools:text="+15 C" />

        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:scaleType="fitStart"
            tools:src="@drawable/sample_weather" />

        <TextView
            android:id="@+id/tvWeatherStub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/weather_stub"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="не известно" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actionLabel"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabelComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentLabel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvComment"
            tools:text="Введите комментарий"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnComment"
            android:layout_toLeftOf="@+id/btnComment"
            android:layout_toEndOf="@+id/tvLabelComment"
            android:layout_toRightOf="@+id/tvLabelComment"
            android:paddingEnd="0dp"
            android:text="Введите комментарий"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvComment"
            android:layout_alignParentRight="true"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_edit_black_24dp" />
    </RelativeLayout>
</LinearLayout>