<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_margin="@dimen/margin"
    app:cardCornerRadius="@dimen/corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/border_gray"
            android:padding="1dp">

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="@dimen/map_preview_size"
                android:layout_height="@dimen/map_preview_size"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivDetail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/tvLabelStart"
            android:layout_alignBottom="@+id/tvLabelStart"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_expand_more_black_24dp" />

        <TextView
            android:id="@+id/tvLabelStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/llPreview"
            android:layout_toRightOf="@+id/llPreview"
            android:text="@string/label_start"
            tools:text="Начало:" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvLabelStart"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/tvLabelStart"
            android:layout_toRightOf="@+id/tvLabelStart"
            android:textColor="@color/colorBlack"
            tools:text="10.10.2018 00:00:10" />

        <TextView
            android:id="@+id/tvLabelDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelStart"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/llPreview"
            android:layout_toRightOf="@+id/llPreview"
            android:text="@string/label_duration"
            tools:text="Продолжительность:" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvLabelDuration"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/tvLabelDuration"
            android:layout_toRightOf="@+id/tvLabelDuration"
            android:textColor="@color/colorBlack"
            tools:text="00:00:10" />

        <TextView
            android:id="@+id/tvLabelDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelDuration"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/llPreview"
            android:layout_toRightOf="@+id/llPreview"
            android:text="@string/label_distance"
            tools:text="Дистанция:" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvLabelDistance"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/tvLabelDistance"
            android:layout_toRightOf="@+id/tvLabelDistance"
            android:textColor="@color/colorBlack"
            tools:text="100500 м" />

        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llPreview"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvLabelSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/speedLabel"
                tools:text="Средняя скорость:" />

            <ImageView
                android:id="@+id/ivAverageSpeedIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvLabelSpeed"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_toEndOf="@+id/tvLabelSpeed"
                android:layout_toRightOf="@+id/tvLabelSpeed"
                tools:src="@drawable/ic_man_standing_black_24dp" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ivAverageSpeedIcon"
                android:layout_toEndOf="@+id/ivAverageSpeedIcon"
                android:layout_toRightOf="@+id/ivAverageSpeedIcon"
                android:textColor="@color/colorBlack"
                tools:text="150 км/ч" />

            <TextView
                android:id="@+id/tvLabelCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelSpeed"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/caloriesLabel"
                tools:text="Истрачено калорий:" />

            <TextView
                android:id="@+id/tvCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvLabelCalories"
                android:layout_marginLeft="@dimen/margin"
                android:layout_toEndOf="@+id/tvLabelCalories"
                android:layout_toRightOf="@+id/tvLabelCalories"
                android:textColor="@color/colorBlack"
                tools:text="150 Ккал" />

            <TextView
                android:id="@+id/tvLabelAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelCalories"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/actionLabel"
                tools:text="Тип деятельности:" />

            <TextView
                android:id="@+id/tvAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvLabelAction"
                android:layout_marginLeft="@dimen/margin"
                android:layout_toEndOf="@+id/tvLabelAction"
                android:layout_toRightOf="@+id/tvLabelAction"
                android:textColor="@color/colorBlack"
                tools:text="Ходьба" />

            <TextView
                android:id="@+id/tvLabelComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLabelAction"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/commentLabel"
                tools:text="Комментарий:" />

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvLabelComment"
                android:layout_marginLeft="@dimen/margin"
                android:layout_toEndOf="@+id/tvLabelComment"
                android:layout_toRightOf="@+id/tvLabelComment"
                android:textColor="@color/colorBlack"
                tools:text="Хорошая прогулка Хорошая прогулка Хорошая прогулка Хорошая прогулка Хорошая прогулка Хорошая прогулка" />

            <ImageButton
                android:id="@+id/ibEditComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvComment"
                android:layout_alignParentRight="true"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_edit_black_24dp" />

            <ImageButton
                android:id="@+id/ibDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvComment"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_delete_black_24dp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/ibShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvComment"
                android:layout_margin="@dimen/margin"
                android:layout_toEndOf="@id/ibDelete"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_share_black_24dp"
                android:visibility="visible" />
        </RelativeLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>
